# prompter

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  hooks.toml  install.sh  justfile  rustfmt.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deps.yml  release.yml
docs/: CONFIG.md
scripts/: install.sh  release.sh
src/: completions.rs  doctor.rs  lib.rs  main.rs  update.rs
tests/: cli.rs
